bad/var_decl_init_invalid_conversion_string_int.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_string_int.lat:3:11: [1;31merror: [0;1mincompatible types: cannot assign variable of type `string` with an expression of type `int`[m
	string x = 42;
	         [1;32m^[m
